# project3

./: README.md  pyproject.toml
.github/workflows/: action.yml
data/: dummy.csv
mst/: graph.py
test/: test_mst.py
