[build-system]
requires = ["flit_core >=3.2,<4", "python_version >= '3.8.8'"]
build-backend = "flit_core.buildapi"

[project]
name = "mst"
authors = [{name = "Jonathan Zhang", email = "jon.zhang@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
#numpy==1.20.1
]

[project.urls]
Home = "https://github.com/jzhang1198/project3"
